charts/services.yaml
kind: Service
apiVersion: v1
metadata:
  name: greeting-server
spec:
  selector:
    app: server-tag
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: greeting-client
spec:
  selector:
    app: client-tag
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
