charts/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: greeting-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: jug.nsk.ru
      http:
        paths:
          - path: /server/?(.*)
            backend:
              serviceName: greeting-server
              servicePort: 8080
          - path: /?(.*)
            backend:
              serviceName: greeting-client
              servicePort: 8080
